test/error/iface/err1.rzy

component
  Err1
    input
      funcA();
      funcB();

    implementation elementary

    function funcA()
    end

  end

